sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8989
      name: http
